* Fixed scale problem in GPU code for brick texture HERRINGBONE and BASKET (issue #438)
* Fixed a possible crash when using trilinear texture with GPUs
* Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
* Fixed a problem with Blender Translation language preference option and scene export on file
* Fixed a self-shadow problem in BIRCPU render engine
* Fixed a Mix material problem when using solid and transparent materials (issue #461)

Beta1 released

* Fixed a crash when using Subdivision shape with vertex colors (issue #469)
* Fixed a possible crash when using multiple GPUs with PhotonGI
* Fixed a deadlock when using multiple renders at the same time in Blender (issue #575)
* Fixed a bug in the support for material .bumpsamplingdistance property
* Fixed a discrepancy in reflected area lights on glossy surfaces between CPU and GPU rendering when light tracing is enabled (issue #470)

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.
* Light emitted by motion blurred triangle lights is approximated using the triangle area of time 0.0 (computing triangle area at runtime would be expansive) so it may be not totally accurate if the motion blur transformation include a scale.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe) and
[Intel C++ redistributable](https://software.intel.com/sites/default/files/managed/59/aa/ww_icl_redist_msi_2018.3.210.zip).